# bSafe

./: app.c  app.h  main.c
charger_fw/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
charger_fw/src/: CMakeLists.txt  app.c  app.h  board.c  board.h  config.h  idf_component.yml  main.c  nvs_settings.c  nvs_settings.h  version.h
charger_fw/src/drivers/: CMakeLists.txt  bq25895.c  bq25895.h  display.c  display.h  font8x8_basic.h  ina226.c  ina226.h  tca9535.c  tca9535.h  ui_demo.c  ui_demo.h
firmware/: app_ui.py  board.py  config.py  input_manager.py  main.py  mocks.py  settings.json  storage.py
firmware/control/: battery_presence.py  charge_control.py  events.py  health_metrics.py  ir_measure.py  mock_telemetry.py  session_logger.py  settings_store.py  state_machine.py  time_sync.py
firmware/ui/: model.py  renderer.py
flasher/: read.bat  write.bat
old_fw/: app_ui.py  config.py  main.py  menu.py  pwm.py  settings.py  timekeeper.py
old_fw/control/: discharge.py  ntc.py  report_builder.py  safety.py  state_machine.py  thermal.py
old_fw/drivers/: bq25895.py  ina226.py  oled_ssd1306.py  rgb_sk6812.py  servo.py  tca9535.py
old_fw/ui/: navigator.py  pages.py
server/: bsafe_host.py  engine.py
